--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -7,14 +7,49 @@
     <div class="col-sm-9">
       <input
         type="text"
-        ngModel
+        [ngModel]="persona.nombre"
         name="nombre"
         class="form-control"
         placeholder="Nombre la persona"
         required />
-      <span *ngIf="miFormulario.controls['nombre']?.errors" class="form-text text-danger">
+      <span
+        *ngIf="miFormulario.controls['nombre']?.errors && miFormulario.controls['nombre']?.touched"
+        class="form-text text-danger">
         Este campo es obligatorio
       </span>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input
+          [(ngModel)]="nuevoJuego"
+          (keyup.enter)="agregarJuego()"
+          type="text"
+          name="nuevoJuego"
+          class="form-control"
+          placeholder="Agregar favorito" />
+        <button (click)="agregarJuego()" class="btn btn-outline-primary" type="button">
+          Agregar
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9">
+      <div *ngFor="let juego of persona.favoritos; let i = index" class="input-group mb-1">
+        <input
+          [(ngModel)]="juego.nombre"
+          name="favorito_{{ i }}"
+          type="text"
+          required=""
+          class="form-control" />
+        <button (click)="eliminar(i)" class="btn btn-outline-danger" type="button">Eliminar</button>
+      </div>
     </div>
   </div>
 
@@ -30,3 +65,6 @@
     </div>
   </div>
 </form>
+
+<span>Persona</span>
+<pre>{{ persona | json }}</pre>
