--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,63 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: <small>Dinámicos</small></h2>
+<hr />
+
+<form (ngSubmit)="guardar()" [formGroup]="miFormulario" autocomplete="off">
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input
+        formControlName="nombre"
+        type="text"
+        class="form-control"
+        placeholder="Nombre la persona" />
+      <span *ngIf="campoEsValido('nombre')" class="form-text text-danger">
+        Este campo es obligatorio
+      </span>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input
+          [formControl]="nuevoFavorito"
+          (keyup.enter)="agregarFavorito()"
+          type="text"
+          class="form-control"
+          placeholder="Agregar favorito" />
+        <button (click)="agregarFavorito()" class="btn btn-outline-primary" type="button">
+          Agregar
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9" formArrayName="favoritos">
+      <div class="input-group mb-1" *ngFor="let favorito of favoritosArr.controls; let i = index">
+        <input [formControlName]="i" type="text" class="form-control" />
+        <button class="btn btn-outline-danger" type="button" (click)="borrar(i)">Eliminar</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button (click)="guardar()" type="button" class="btn btn-primary float-end">Guardar</button>
+    </div>
+  </div>
+</form>
+
+<span>Valid</span>
+<pre>{{ miFormulario.valid }}</pre>
+<br />
+
+<span>Value</span>
+<pre>{{ miFormulario.value | json }}</pre>
+<br />
+
+<span>Agregar Juego</span>
+<pre>{{ nuevoFavorito.valid }}</pre>
+<pre>{{ nuevoFavorito.value }}</pre>
