--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,84 @@
-<p>switches works!</p>
+<h2>Reactivos: Switches</h2>
+<hr />
+
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Género</label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="radio"
+          formControlName="genero"
+          value="M"
+          id="radioMasculino" />
+        <label class="form-check-label" for="radioMasculino">Masculino</label>
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="radio"
+          formControlName="genero"
+          value="F"
+          id="radioFemenino" />
+        <label class="form-check-label" for="radioFemenino">Femenino</label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Notificaciones</label>
+    <div class="col-sm-9">
+      <div class="form-check form-switch mt-2">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          formControlName="notificaciones"
+          role="switch"
+          id="flexSwitchCheckChecked" />
+        <label class="form-check-label" for="flexSwitchCheckChecked"
+          >Quiero recibir notificaciones</label
+        >
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"></label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          formControlName="condiciones"
+          type="checkbox"
+          value=""
+          id="flexCheckChecked" />
+        <label class="form-check-label" for="flexCheckChecked">Terminos y condiciones</label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <button type="submit" class="btn btn-primary float-end">Guardar</button>
+    </div>
+  </div>
+</form>
+
+<h5>Valor del formulario</h5>
+<pre>{{ miFormulario.value | json }}</pre>
+<br />
+
+<h5>Persona</h5>
+<pre>{{ persona | json }}</pre>
+<br />
+
+<h5>Valido</h5>
+<pre>{{ miFormulario.valid }}</pre>
+<br />
+
+<!-- <h3>Términos</h3> -->
+<!-- <pre>{{ miFormulario?.controls?.['terminos']?.errors | json }}</pre> -->
+
+<!-- <br />
+<pre>Condiciones: {{ '' }}</pre> -->
